--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,11 @@
 			<artifactId>spring-cloud-spring-service-connector</artifactId>
 			<version>1.1.0.BUILD-SNAPSHOT</version>
 		</dependency>
-        
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-social-twitter</artifactId>
+		</dependency>
     </dependencies>
 
     <properties>
