--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,18 @@
 
 	
 	<!-- Google api dependencies end -->
-		
-		
+
+
+	<dependency>
+		<groupId>com.goldmansachs</groupId>
+		<artifactId>gs-collections</artifactId>
+		<version>5.1.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.scala-lang</groupId>
+		<artifactId>scala-library</artifactId>
+		<version>2.10.4</version>
+	</dependency>
     </dependencies>
 
     <properties>
