--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.jaidev.app</groupId>
-  <artifactId>one-click-share-link</artifactId>
-  <packaging>war</packaging>
-  <version>1.0</version>
-  <name>one-click-share-link</name>
-  <url>http://maven.apache.org</url>
-  <build>
-    <finalName>one-click-share-link</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-  </build>
-  
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.1.8.RELEASE</version>
-    </parent>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.jaidev.app</groupId>
+	<artifactId>one-click-share-link</artifactId>
+	<packaging>war</packaging>
+	<version>1.0</version>
+	<name>one-click-share-link</name>
+	<url>http://maven.apache.org</url>
+	<build>
+		<finalName>one-click-share-link</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
-      
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.1.8.RELEASE</version>
+	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-heroku-connector</artifactId>
@@ -39,13 +39,13 @@
 			<artifactId>spring-cloud-spring-service-connector</artifactId>
 			<version>1.1.0.BUILD-SNAPSHOT</version>
 		</dependency>
-		
-		  <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
 
-	<!-- Google api dependencies start -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<!-- Google api dependencies start -->
 
 		<dependency>
 			<groupId>com.google.http-client</groupId>
@@ -69,49 +69,56 @@
 			<version>v2-rev29-1.13.2-beta</version>
 		</dependency>
 
-	
-	<!-- Google api dependencies end -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.3</version>
+		</dependency>
 
 
-	<dependency>
-		<groupId>com.goldmansachs</groupId>
-		<artifactId>gs-collections</artifactId>
-		<version>5.1.0</version>
-	</dependency>
-	<dependency>
-		<groupId>org.scala-lang</groupId>
-		<artifactId>scala-library</artifactId>
-		<version>2.10.4</version>
-	</dependency>
-    </dependencies>
 
-    <properties>
-        <start-class>core.Application</start-class>
-    </properties>
-    
-    
+		<!-- Google api dependencies end -->
+
+
+		<dependency>
+			<groupId>com.goldmansachs</groupId>
+			<artifactId>gs-collections</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
+	</dependencies>
+
+	<properties>
+		<start-class>core.Application</start-class>
+	</properties>
+
+
 	<repositories>
-	<repository>
-		<id>org.springframework.maven.milestone</id>
-		<name>Spring Maven Milestone Repository</name>
-		<url>http://repo.spring.io/milestone</url>
-		<snapshots>
-			<enabled>false</enabled>
-		</snapshots>
-	</repository>
-	<repository>
-		<id>spring-snapshots</id>
-		<name>Spring Snapshots</name>
-		<url>http://repo.spring.io/snapshot</url>
-		<snapshots>
-			<enabled>true</enabled>
-		</snapshots>
-	</repository>
-	<repository>
-		<id>google-api-services</id>
-		<url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
-	</repository>
-</repositories>
+		<repository>
+			<id>org.springframework.maven.milestone</id>
+			<name>Spring Maven Milestone Repository</name>
+			<url>http://repo.spring.io/milestone</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>spring-snapshots</id>
+			<name>Spring Snapshots</name>
+			<url>http://repo.spring.io/snapshot</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+		<repository>
+			<id>google-api-services</id>
+			<url>http://google-api-client-libraries.appspot.com/mavenrepo</url>
+		</repository>
+	</repositories>
 
 	<pluginRepositories>
 		<pluginRepository>
@@ -132,6 +139,6 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-    
-      
+
+
 </project>
