--- a/one-click-share-chrome-ext/manifest.json
+++ b/one-click-share-chrome-ext/manifest.json
@@ -1,18 +1,22 @@
 {
-  "manifest_version": 2,
+    "manifest_version": 2,
 
-  "name": "1-Click Link Share",
-  "description": "Share and receive links with 1 click",
-  "version": "1.0",
+    "name": "1-Click Share Link",
+    "description": "Share and receive links with 1 click",
+    "version": "1.0",
 
-  "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
-  },
-  "permissions": [
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_popup": "popup.html"
+    },
+    "background": {
+        "page": "background.html"
+    },
+
+    "permissions": [
     "tabs",
     "activeTab",
-    "http://one-click-share-link.herokuapp.com/links",
+    "https://one-click-share-link.herokuapp.com/links",
     "*://*/*/"
   ]
 }
