--- a/pom.xml
+++ b/pom.xml
@@ -75,21 +75,14 @@
 			<version>2.3</version>
 		</dependency>
 
-
-
-		<!-- Google api dependencies end -->
-
+	<!-- Google api dependencies end -->
 
 		<dependency>
-			<groupId>com.goldmansachs</groupId>
-			<artifactId>gs-collections</artifactId>
-			<version>5.1.0</version>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.10.4</version>
-		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-solr</artifactId>
