--- a/pom.xml
+++ b/pom.xml
@@ -79,8 +79,8 @@
 
 		<dependency>
 			<groupId>javax.mail</groupId>
-			<artifactId>javax.mail-api</artifactId>
-			<version>1.5.1</version>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
 		</dependency>
 
 		<dependency>
