--- a/one-click-share-chrome-ext-published/manifest.json
+++ b/one-click-share-chrome-ext-published/manifest.json
@@ -3,11 +3,16 @@
 
     "name": "1-Click Share Link",
     "description": "Share and receive links with 1 click",
-    "version": "1.1",
+    "version": "1.2",
 
     "browser_action": {
-        "default_icon": "icon.png",
+        "default_icon": "icon16.png",
         "default_popup": "popup.html"
+    },
+    "icons": {
+        "16": "icon16.png",
+        "48": "icon48.png",
+        "128": "icon128.png"
     },
     "background": {
         "page": "background.html"
@@ -25,6 +30,8 @@
     "identity",
     "tabs",
     "activeTab",
-    "https://one-click-share-link-dev.herokuapp.com/*"
+    "https://one-click-share-link-dev.herokuapp.com/*",
+    "https://one-click-share-link.herokuapp.com/*"
+
   ]
 }
