--- a/one-click-share-chrome-ext-published/manifest.json
+++ b/one-click-share-chrome-ext-published/manifest.json
@@ -3,7 +3,7 @@
 
     "name": "1-Click Share Link",
     "description": "Share and receive links with 1 click",
-    "version": "1.7.11",
+    "version": "1.7.12",
 
     "browser_action": {
         "default_icon": "icon16.png",
@@ -29,6 +29,7 @@
     "identity",
     "tabs",
     "activeTab",
+    "notifications",
     "https://one-click-share-link.herokuapp.com/*"
   ]
 }
